--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 				<ul class="sidebar__list">
 					<li class="sidebar__list sidebar__list--active"><a href="#">Мир Minecraft</a>
 						<ul class="sidebar__sublist">
-							<li><a href="#">Блоки</a></li>
-							<li><a href="#">Мобы</a></li>
-							<li><a href="#">Структуры</a></li>
-							<li><a href="#">Биомы</a></li>
-							<li><a href="#">Миры</a></li>
+							<li><a href="#">- Блоки</a></li>
+							<li><a href="#">- Мобы</a></li>
+							<li><a href="#">- Структуры</a></li>
+							<li><a href="#">- Биомы</a></li>
+							<li><a href="#">- Миры</a></li>
 						</ul>
 					</li>
 					<li class="sidebar__list"><a href="#">Industrial craft</a></li>
