added flex container for header top

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header class="header">
 
 		<div class="header__top">
-			<div class="container ">
+			<div class="container top-flex">
 				<p class="header__top-text">Подключайся и играй на наших серверах!</p>
 				<div class="header__top-icons">
 					<a href="#"><img src="img/icon_social_vk.png" alt="Группа Minecraft-km7 в Вконтакте"></a>
@@ -42,7 +42,7 @@
 					</p>
 				</div>
 				<div class="header__content-btn">
-					<a href="#">Выбрать серверах</a>
+					<a href="#">Выбрать сервер</a>
 					<a href="#">Случайный</a>
 				</div>
 				<div class="header__content-logo2">
