--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 						Подключайся и играй на наших серверах!
 					</h1>
 					<!--<div class="about__img">-->
-						<img class="responsive about__img" src="img/screenshot_minecraft.jpg" alt="Скриншот из игры Minecraft" width="736" height="325">
+					<img class="responsive about__img" src="img/screenshot_minecraft.jpg" alt="Скриншот из игры Minecraft"
+						width="736" height="325">
 					<!--</div>-->
 					<p class="about__text">
 						Minecraft — компьютерная игра в стиле песочницы с открытым миром, в которой перед игроком не ставятся
@@ -174,10 +175,11 @@
 		</div>
 
 		<div class="footer__copyright container">
-			&copy; &Delta;&epsilon;&alpha;&delta;&pi;&omicron;&omicron;&lambda; &amp; &Kappa;&omicron; 
+			&copy; &Delta;&epsilon;&alpha;&delta;&pi;&omicron;&omicron;&lambda; &amp; &Kappa;&omicron;
 		</div>
 
 	</footer>
 
 </body>
+
 </html>
