added code for sprite

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 				<div class="container top-flex">
 					<p class="header__top-text">Подключайся и играй на наших серверах!</p>
 					<div class="header__top-icons">
-						<a href="#"><img src="img/icon_social_vk.png" alt="Группа Minecraft-km7 в Вконтакте"></a>
-						<a href="#"><img src="img/icon_social_fb.png" alt="Группа Minecraft-km7 в Фейсбук"></a>
-						<a href="#"><img src="img/icon_language.png" alt="Change language"></a>
+						<a href="#" class="vk" title="ВКонтакте">Паблик Minecraft-km7 ВКонтакте</a>
+						<a href="#" class="fb" title="Facebook">Группа Minecraft-km7 Facebook</a>
+						<a href="#" class="en" title="English version">English version</a>
 					</div>
 				</div>
 			</div>
