--- a/index.html
+++ b/index.html
@@ -31,12 +31,19 @@
 					</div>
 					<div class="header__content-contacts">
 						<div class="header-contacts__phones contacts-items">
-							<p><span>Админ:</span><a href="tel:+380683332210">+38(068) 333-22-10</a></p>
-							<p><span></span><a href="tel:+380997505050">+38(099) 750-50-50</a></p>
-							<p class="contacts-items-row3"><span>По донату:</span><a href="tel:+380673322180">067-33-22-180</a></p>
+							<p class="clear-fix">
+								Админ:
+								<a href="tel:+380683332210">+38(068) 333-22-10</a>
+								<a href="tel:+380997505050">+38(099) 750-50-50</a>
+							</p>
+							<p class="clear-fix">
+								По донату:
+								<a href="tel:+380673322180">067-33-22-180</a>
+							</p>
 						</div>
-						<div class="header-contacts__skype">
-							<span class="skype">Скайп:</span><a href="skype:minecraft-km7?chat">minecraft-km7</a>
+						<div class="header-contacts__skype clear-fix">
+							Скайп:
+							<a href="skype:minecraft-km7?chat">minecraft-km7</a>
 						</div>
 					</div>
 					<div class="header__content-btn">
@@ -159,9 +166,15 @@
 				<div class="footer__items container">
 					<p class="footer__contacts-text">Подключайся и играй на наших серверах!</p>
 					<div class="footer-contacts__phones contacts-items">
-						<p><span>Админ:</span><a href="tel:+380683332210">+38(068) 333-22-10</a></p>
-						<p><span></span><a href="tel:+380997505050">+38(099) 750-50-50</a></p>
-						<p><span>По донату:</span><a href="tel:+380673322180">067-33-22-180</a></p>
+						<p class="clear-fix">
+							Админ:
+							<a href="tel:+380683332210">+38(068) 333-22-10</a>
+							<a href="tel:+380997505050">+38(099) 750-50-50</a>
+						</p>
+						<p class="clear-fix">
+							По донату:
+							<a href="tel:+380673322180">067-33-22-180</a>
+						</p>
 					</div>
 				</div>
 			</div>
