--- a/index.html
+++ b/index.html
@@ -56,11 +56,7 @@
 				</div>
 			</div>
 
-			<!--
-			<menu class="header__menu container">
-			или
-			<div class="container">
-				<menu class="header__menu">-->
+
 			<nav class="header__nav">
 				<menu class="header__menu container">
 					<li class="header__menu-item header__menu-item--active"><a href="#">Главная</a></li>
@@ -102,8 +98,8 @@
 							Подключайся и играй на наших серверах!
 						</h1>
 						<!--<div class="about__img">-->
-						<img class="responsive about__img" src="img/screenshot_minecraft.jpg" alt="Скриншот из игры Minecraft"
-							width="736" height="325">
+						<img src="img/screenshot_minecraft.jpg" alt="Скриншот из игры Minecraft"
+							>
 						<!--</div>-->
 						<p class="about__text">
 							Minecraft — компьютерная игра в стиле песочницы с открытым миром, в которой перед игроком не ставятся
